# parallel-kalman-filter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aaron.sh  data.csv  file1.csv  linearMotion.cpp  main.cpp  matops.h  plotting_code.py  run_kalman.sbatch  run_kalman_mpi.sbatch  runkalmanfilter.py  testrun.py  timeCode.sh  writedata.cpp
.github/ISSUE_TEMPLATE/: feature_request.md
src/: linearMotion.cpp  main.cpp  main_1d.cpp  main_mpi.cpp  main_singleobj.cpp  matops.cpp  plotter.cpp  test_matops.cpp  timer.cpp  write.cpp
src/include/: linearMotion.h  matops.h  plotter.h  timer.h  write.h
